--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "style": "scss --load-path=node_modules/ --watch src/scss:public/"
+    "style": "sass --load-path=node_modules/ --watch src/scss:public/"
   },
   "eslintConfig": {
     "extends": "react-app"
