--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     },
     "dependencies": {
         "bulma": "^0.7.5",
+        "bulma-calendar": "^6.0.7",
+        "classnames": "^2.2.6",
         "react-router-dom": "^5.0.1"
     },
     "babel": {
